crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_quoted_value_retained.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_quoted_value_retained

--- step: preview ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,6 +0,0 @@\n-.card {\n-  font-family: \"My Font\", sans-serif;\n-}\n-.btn {\n-  padding: 13px;\n-}\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,5 @@\n @import \"tailwindcss\";\n+\n+@theme {\n+  --font-my-font: \"My Font\", sans-serif;\n+}\n--- a/index.html\n+++ b/index.html\n@@ -1,3 +1,3 @@\n-<link rel=\"stylesheet\" href=\"./Button.module.css\">\n-<div class=\"card\">Quoted</div>\n-<div class=\"btn\">Plain</div>\n+\n+<div class=\"card font-my-font\">Quoted</div>\n+<div class=\"btn p-[13px]\">Plain</div>\nPreviewed 3 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged

--- step: write ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,6 +0,0 @@\n-.card {\n-  font-family: \"My Font\", sans-serif;\n-}\n-.btn {\n-  padding: 13px;\n-}\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,5 @@\n @import \"tailwindcss\";\n+\n+@theme {\n+  --font-my-font: \"My Font\", sans-serif;\n+}\n--- a/index.html\n+++ b/index.html\n@@ -1,3 +1,3 @@\n-<link rel=\"stylesheet\" href=\"./Button.module.css\">\n-<div class=\"card\">Quoted</div>\n-<div class=\"btn\">Plain</div>\n+\n+<div class=\"card font-my-font\">Quoted</div>\n+<div class=\"btn p-[13px]\">Plain</div>\nApplied 3 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: ".card {\n  font-family: \"My Font\", sans-serif;\n}\n.btn {\n  padding: 13px;\n}\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@theme {\n  --font-my-font: \"My Font\", sans-serif;\n}\n"
  modified index.html
    before: "<link rel=\"stylesheet\" href=\"./Button.module.css\">\n<div class=\"card\">Quoted</div>\n<div class=\"btn\">Plain</div>\n"
    after: "\n<div class=\"card font-my-font\">Quoted</div>\n<div class=\"btn p-[13px]\">Plain</div>\n"
