crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_static_literals.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_static_literals

--- step: preview ---
status: 0
stdout: "--- a/index.html\n+++ b/index.html\n@@ -1,3 +1,3 @@\n <!doctype html>\n-<link rel=\"stylesheet\" href=\"./legacy.css\"><p>Hello é</p><div class=\"card\"></div><main id=\"hero\">Text</main>\n+<link rel=\"stylesheet\" href=\"./legacy.css\"><p>Hello é</p><div class=\"card p-[13px]\"></div><main id=\"hero\" class=\"h-screen\">Text</main>\n <div class=\"unrelated   untouched\"></div><div class=\"card   p-[13px]\"></div>\nPreviewed 1 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[retained-global-rule] legacy.css:1:1-1:25 Global CSS is never deleted automatically.\nwarning[retained-global-rule] legacy.css:2:1-2:25 Global CSS is never deleted automatically.\n"
workspace delta:
  unchanged

--- step: write ---
status: 0
stdout: "--- a/index.html\n+++ b/index.html\n@@ -1,3 +1,3 @@\n <!doctype html>\n-<link rel=\"stylesheet\" href=\"./legacy.css\"><p>Hello é</p><div class=\"card\"></div><main id=\"hero\">Text</main>\n+<link rel=\"stylesheet\" href=\"./legacy.css\"><p>Hello é</p><div class=\"card p-[13px]\"></div><main id=\"hero\" class=\"h-screen\">Text</main>\n <div class=\"unrelated   untouched\"></div><div class=\"card   p-[13px]\"></div>\nApplied 1 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[retained-global-rule] legacy.css:1:1-1:25 Global CSS is never deleted automatically.\nwarning[retained-global-rule] legacy.css:2:1-2:25 Global CSS is never deleted automatically.\n"
workspace delta:
  modified index.html
    before: "<!doctype html>\n<link rel=\"stylesheet\" href=\"./legacy.css\"><p>Hello é</p><div class=\"card\"></div><main id=\"hero\">Text</main>\n<div class=\"unrelated   untouched\"></div><div class=\"card   p-[13px]\"></div>\n"
    after: "<!doctype html>\n<link rel=\"stylesheet\" href=\"./legacy.css\"><p>Hello é</p><div class=\"card p-[13px]\"></div><main id=\"hero\" class=\"h-screen\">Text</main>\n<div class=\"unrelated   untouched\"></div><div class=\"card   p-[13px]\"></div>\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[retained-global-rule] legacy.css:1:1-1:25 Global CSS is never deleted automatically.\nwarning[retained-global-rule] legacy.css:2:1-2:25 Global CSS is never deleted automatically.\n"
workspace delta:
  unchanged
