crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_static_module_link.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_static_module_link

--- step: preview ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-.button { padding: 13px; }\n--- a/index.html\n+++ b/index.html\n@@ -1,3 +1,3 @@\n <link rel=\"stylesheet\" href=\"./globals.css\">\n-<link rel=\"stylesheet\" href=\"./Button.module.css?v=1&amp;x=2\">\n-<button class=\"button\">HTML</button>\n+\n+<button class=\"button p-[13px]\">HTML</button>\nPreviewed 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged

--- step: write ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-.button { padding: 13px; }\n--- a/index.html\n+++ b/index.html\n@@ -1,3 +1,3 @@\n <link rel=\"stylesheet\" href=\"./globals.css\">\n-<link rel=\"stylesheet\" href=\"./Button.module.css?v=1&amp;x=2\">\n-<button class=\"button\">HTML</button>\n+\n+<button class=\"button p-[13px]\">HTML</button>\nApplied 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: ".button { padding: 13px; }\n"
  modified index.html
    before: "<link rel=\"stylesheet\" href=\"./globals.css\">\n<link rel=\"stylesheet\" href=\"./Button.module.css?v=1&amp;x=2\">\n<button class=\"button\">HTML</button>\n"
    after: "<link rel=\"stylesheet\" href=\"./globals.css\">\n\n<button class=\"button p-[13px]\">HTML</button>\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
