crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_unsupported_links.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_unsupported_links

--- step: preview ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[dynamic-html-attribute] dynamic.html:1:56-1:72 This HTML attribute is not a safely writable quoted literal.\nwarning[retained-global-rule] legacy.css:1:1-1:25 Global CSS is never deleted automatically.\nwarning[unsupported-html-stylesheet-link] remote.html:1:30-1:60 Only local package stylesheet links are analyzed.\nwarning[unsupported-link-media] speech.html:1:30-1:42 The stylesheet link media condition \"speech\" cannot be represented safely.\n"
workspace delta:
  unchanged
