crates/snapshots/snapshots/cli_snapshots__html_workspaces__link_discovered_module_import.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: link_discovered_module_import

--- step: write ---
status: 0
stdout: "--- a/index.html\n+++ b/index.html\n@@ -1,1 +1,1 @@\n-<link rel=\"stylesheet\" href=\"./dist/main.css\"><button class=\"button\">HTML</button>\n+<link rel=\"stylesheet\" href=\"./dist/main.css\"><button class=\"button p-[13px]\">HTML</button>\nApplied 1 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:1:1-1:27 No exclusively supported className references were found.\nwarning[unsupported-css-module-reference] dist/main.css Another stylesheet references the CSS Module, so it is retained.\nwarning[unsupported-at-rule] dist/main.css:1:1-1:31 The rule is outside the supported declaration or selector subset.\n"
workspace delta:
  modified index.html
    before: "<link rel=\"stylesheet\" href=\"./dist/main.css\"><button class=\"button\">HTML</button>\n"
    after: "<link rel=\"stylesheet\" href=\"./dist/main.css\"><button class=\"button p-[13px]\">HTML</button>\n"
