crates/snapshots/snapshots/cli_snapshots__html_workspaces__multi_module_conflict.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: multi_module_conflict

--- step: write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[batch-stylesheet-conflict] accent.module.css:1:1-1:26 Generated utilities `p-[13px]` and `p-[4px]` conflict on the same source element, so the contributing rule is retained.\nwarning[batch-stylesheet-conflict] title.module.css:1:1-1:26 Generated utilities `p-[13px]` and `p-[4px]` conflict on the same source element, so the contributing rule is retained.\n"
workspace delta:
  unchanged
