crates/snapshots/snapshots/cli_snapshots__html_workspaces__multi_module_merged.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
assertion_line: 3
expression: document
---
case: multi_module_merged

--- step: write ---
status: 0
stdout: "--- a/accent.module.css\n+++ b/accent.module.css\n@@ -1,1 +0,0 @@\n-.accent { color: red; }\n--- a/Card.tsx\n+++ b/Card.tsx\n@@ -1,3 +1,1 @@\n-import title from './title.module.css';\n-import accent from './accent.module.css';\n-export const Card = () => <div className={`${title.title} ${accent.accent}`} />;\n+export const Card = () => <div className=\"p-[13px] text-[red]\" />;\n--- a/title.module.css\n+++ b/title.module.css\n@@ -1,1 +0,0 @@\n-.title { padding: 13px; }\nApplied 3 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  modified Card.tsx
    before: "import title from './title.module.css';\nimport accent from './accent.module.css';\nexport const Card = () => <div className={`${title.title} ${accent.accent}`} />;\n"
    after: "export const Card = () => <div className=\"p-[13px] text-[red]\" />;\n"
  deleted accent.module.css
    before: ".accent { color: red; }\n"
  deleted title.module.css
    before: ".title { padding: 13px; }\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
