crates/snapshots/snapshots/cli_snapshots__html_workspaces__nested_html_reference.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: nested_html_reference

--- step: write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:1:1-1:27 No exclusively supported className references were found.\nwarning[reference-only-css-module-consumer] nested/index.html A reference-only source uses this CSS Module, so it is retained.\n"
workspace delta:
  unchanged
