crates/snapshots/snapshots/cli_snapshots__html_workspaces__nested_package_ownership.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: nested_package_ownership

--- step: write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
